package com.example.to_docompose.util

object TestTags {

    const val EMPTY_LIST = "EmptyListLayout"
    const val TASK_LIST = "TaskListLayout"
    const val MORE_OPTIONS_TOOLBAR = "MoreOptionsToolbar"
    const val DELETE_ALL_MORE_OPTION = "DeleteAllTasksOption"
    const val DELETE_TASK_TOOLBAR_OPTION = "DeleteTaskToolbarOption"
    fun taskItem(taskId: Int) = "TaskItem_$taskId"
    const val TASK_SCREEN = "TaskScreen"
    const val LIST_SCREEN = "ListScreen"
    const val ARROW_BACK_ICON = "ArrowBack"

    const val FAB_BUTTON = "FabButton"
    const val TITLE_TEXT = "TitleText"
    const val DROP_DOWN_MENU_PRIORITY = "DropDownMenuPriority"
    const val DROP_DOWN_ITEM_HIGH = "DropDownItemHigh"
    const val DROP_DOWN_ITEM_MEDIUM = "DropDownItemMedium"
    const val DROP_DOWN_ITEM_LOW = "DropDownItemLow"
    const val DESCRIPTION_TEXT = "DescriptionText"

    const val CONFIRM_TASK_ICON = "ConfirmTaskIcon"
}